# FusionGraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  fusiongraph-architecture.html
.code-foundry/issues/10/: discovery.md
.code-foundry/issues/11/: discovery.md
.code-foundry/issues/12/: discovery.md
.code-foundry/issues/14/: discovery.md
.code-foundry/issues/15/: discovery.md
.code-foundry/issues/16/: discovery.md
.code-foundry/issues/2/: discovery.md
.code-foundry/issues/4/: discovery.md
.code-foundry/issues/5/: discovery.md
.code-foundry/issues/6/: discovery.md
.code-foundry/issues/7/: discovery.md
.code-foundry/issues/8/: discovery.md
.code-foundry/issues/9/: discovery.md
.code-foundry/qa/: review-sweep-2026-04-23.md
.github/workflows/: bench.yml  ci.yml
benches/: traversal.rs
benchmarks/duckpgq/: README.md  khop.sql  run.sh
crates/fusiongraph-core/: Cargo.toml
crates/fusiongraph-core/benches/: traversal.rs
crates/fusiongraph-core/src/: circuit_breaker.rs  csr.rs  delta.rs  error.rs  gen.rs  lib.rs  traversal.rs  types.rs
crates/fusiongraph-core/src/csr/: builder.rs  shard.rs
crates/fusiongraph-core/src/traversal/: bfs.rs  bitset.rs  dobfs.rs  simd.rs
crates/fusiongraph-datafusion/: Cargo.toml
crates/fusiongraph-datafusion/benches/: iceberg_e2e.rs  parquet_e2e.rs  traversal_vs_sql.rs
crates/fusiongraph-datafusion/examples/: graph_traverse.rs  iceberg_graph.rs
crates/fusiongraph-datafusion/src/: dictionary.rs  error.rs  exec.rs  iceberg_ext.rs  lib.rs  loader.rs  provider.rs  udtf.rs
crates/fusiongraph-datafusion/src/exec/: csr_builder.rs  graph_traversal.rs
crates/fusiongraph-datafusion/tests/: iceberg_e2e.rs
crates/fusiongraph-datafusion/tests/memory_catalog/: mod.rs
crates/fusiongraph-ffi/: Cargo.toml
crates/fusiongraph-ffi/src/: lib.rs
crates/fusiongraph-ontology/: Cargo.toml
crates/fusiongraph-ontology/src/: error.rs  lib.rs  parser.rs  schema.rs  validation.rs
docs/: FUSIONGRAPH_ARCHITECTURE.md  FUSIONGRAPH_INTEGRATION_GUIDE.md  FUSIONGRAPH_README_EXPANDED.md  FusionGraph_API_Reference.md  FusionGraph_DataFusion Graph Execution RFC.md  FusionGraph_Error_Taxonomy.md  FusionGraph_Leveraging DataFusion Ecosystem Patterns.md  FusionGraph_Ontology_Schema.md  FusionGraph_Research DataFusion Graph Query Execution.md  FusionGraph_Spec Document.md  FusionGraph_Technical Blueprint.md  FusionGraph_Testing_Strategy.md  RELEASING.md  ROADMAP.md
scripts/: complete_issue.sh  devwork.sh  local_ci.sh  qa_gate.sh  workteam.sh
