[workspace]
resolver = "2"
members = [
    "crates/fusiongraph-core",
    "crates/fusiongraph-ontology",
    "crates/fusiongraph-datafusion",
    "crates/fusiongraph-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/Intelligence-Builder/FusionGraph"
authors = ["Intelligence-Builder"]

[workspace.dependencies]
# Arrow ecosystem
arrow = { version = "54", default-features = false, features = ["ffi"] }
arrow-array = "54"
arrow-schema = "54"
datafusion = "45"
datafusion-common = "45"
datafusion-expr = "45"
datafusion-physical-plan = "45"
iceberg = "0.4"
parquet = "54"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Concurrency
crossbeam-epoch = "0.9"
dashmap = "6"
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# Utilities
num_cpus = "1.16"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
fusiongraph-core = { path = "crates/fusiongraph-core" }
fusiongraph-ontology = { path = "crates/fusiongraph-ontology" }
fusiongraph-datafusion = { path = "crates/fusiongraph-datafusion" }
fusiongraph-ffi = { path = "crates/fusiongraph-ffi" }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
