[package]
name = "fusiongraph-datafusion"
description = "DataFusion integration: GraphTableProvider and execution operators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
fusiongraph-core = { workspace = true }
fusiongraph-ontology = { workspace = true }

arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
num_cpus = { workspace = true }

iceberg = { workspace = true, optional = true }
iceberg-datafusion = { workspace = true, optional = true }

[features]
default = ["iceberg"]
iceberg = ["dep:iceberg", "dep:iceberg-datafusion"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion = { workspace = true }
parquet = { workspace = true }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
serde_json = { workspace = true }

[[bench]]
name = "traversal_vs_sql"
harness = false

[[bench]]
name = "parquet_e2e"
harness = false

[[bench]]
name = "iceberg_e2e"
harness = false
required-features = ["iceberg"]

[[example]]
name = "iceberg_graph"
required-features = ["iceberg"]

[lints]
workspace = true
